fix: cards overflow

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -100,3 +100,7 @@
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+
+.list-columns {
+  columns: 4;
+}
